--- a/ContactsManager.Tests/ContactsManager.Tests.csproj
+++ b/ContactsManager.Tests/ContactsManager.Tests.csproj
@@ -89,8 +89,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContactManagerServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -99,8 +99,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\ContactsManager\ContactsManager.csproj">
-      <Project>{6956640D-C33D-4A60-8A3F-7CC65309E274}</Project>
+      <Project>{6956640d-c33d-4a60-8a3f-7cc65309e274}</Project>
       <Name>ContactsManager</Name>
     </ProjectReference>
   </ItemGroup>
